<resources>
    <string name="app_name">Calculator</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="error">E</string>
    <string name="firstnumber">Enter first number</string>
    <string name="secondnumber">Enter second number</string>
    <string name="snackHint">Invalid input, all fields must be filled!</string>
    <string name="nullDivision">Division by zero!</string>
</resources>
