<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constr_layout">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/linearLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical" tools:layout_marginLeft="8dp" tools:layout_editor_absoluteX="8dp"
            tools:layout_marginRight="8dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/first_number" android:hint="@string/firstnumber"
                />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/sign_textView" android:textSize="30sp" android:layout_height="match_parent"
                    tools:layout_editor_absoluteY="465dp"
                    tools:layout_editor_absoluteX="374dp" android:textColor="@android:color/black"/>
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/second_number" android:hint="@string/secondnumber"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/result_text_view" android:textSize="30sp"
                android:gravity="center" android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <Button
                android:text="@string/plus"
                android:layout_width="80dp"
                android:layout_height="80dp" android:id="@+id/plus_button" android:layout_weight="1"
                android:elevation="0dp" android:textSize="30sp" android:textColor="@android:color/black"
                android:backgroundTint="@color/colorPrimary"/>
        <Button
                android:text="@string/minus"
                android:layout_width="80dp"
                android:layout_height="80dp" android:id="@+id/minus_button" android:layout_weight="1"
                android:elevation="0dp" android:textSize="30sp" android:textColor="@android:color/black"
                android:backgroundTint="@color/colorPrimary"/>
        <Button
                android:text="@string/multiplication"
                android:layout_width="80dp"
                android:layout_height="80dp" android:id="@+id/multiplication_button" android:layout_weight="1"
                android:elevation="0dp" android:textSize="30sp" android:textColor="@android:color/black"
                android:backgroundTint="@color/colorPrimary"/>
        <Button
                android:text="@string/division"
                android:layout_width="80dp"
                android:layout_height="80dp" android:id="@+id/division_button" android:layout_weight="1"
                android:elevation="0dp" android:textSize="30sp" android:textColor="@android:color/black"
                android:backgroundTint="@color/colorPrimary"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>